# flexvec

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
flexvec/: __init__.py  __main__.py  cli.py  embed.py  execute.py  keyword.py  mcp_core.py  mcp_server.py  score.py  spec.py  vec_ops.py
flexvec/ai/: __init__.py
flexvec/ai/skills/: __init__.py
flexvec/ai/skills/flexvec/: SKILL.md  __init__.py
flexvec/ai/skills/flexvec/reference/: mcp.md  retrieval-contract.md  sql-patterns.md
flexvec/onnx/: __init__.py  embed.py  fetch.py  nomic_embed.py
tests/: build_beir_db.py  conftest.py  test_algebraic.py  test_cli.py  test_keyword.py  test_mcp_server.py  test_tokens_beir.py  test_vec_ops.py
