[project]
name = "flexvec"
version = "0.4.0"
description = "agent-native SQLite vector retrieval"
license = { text = "MIT" }
authors = [{name = "Damian Delmas", email = "damian@getflex.dev"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.optional-dependencies]
embed = ["onnxruntime", "tokenizers"]
mcp = ["mcp", "onnxruntime", "tokenizers"]

[project.scripts]
flexvec = "flexvec.cli:main"
flexvec-mcp = "flexvec.mcp_server:main"

[project.urls]
Homepage = "https://github.com/damiandelmas/flexvec"
Paper = "https://arxiv.org/abs/2603.22587"

[tool.setuptools.packages.find]
include = ["flexvec*"]

[tool.setuptools.package-data]
flexvec = [
  "onnx/*.json",
  "onnx/vocab.txt",
  "ai/skills/flexvec/*.md",
  "ai/skills/flexvec/reference/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["unit", "vec_ops"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
